add basic possibility to book and unbook environment

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,7 @@ html
   body
     = render 'shared/navbar'
 
-    .container
+    .container.additional-container-pad
       - if notice
         .alert.alert-success = notice
       - if alert
