--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,2 +1,14 @@
-h1 Home#index
-p Find me in app/views/home/index.html.erb
+- if @environments
+  table.table.table-striped
+    thead.thead-dark
+      tr
+        th.col-4 Name
+        th.col-6 Status
+        th.col-2.text-center Action
+
+    tbody
+      = render @environments
+
+#modal-window.modal.fade tabindex='-1' role='dialog' aria-labelledby='myModalLabel' aria-hidden='true'
+  .modal-dialog role='document'
+    .modal-content
