--- a/app/views/environments/_show.html.slim
+++ b/app/views/environments/_show.html.slim
@@ -15,7 +15,9 @@
         - @environment.booked_environments.each_with_index do |booking, index|
           tr
             td = index + 1
-            td = link_to 'Cancel', booked_environment_path(booking), method: :delete, class: 'btn btn-sm btn-warning'
+            td
+              - if current_user.booked_environments.include?(booking)
+                = link_to 'Cancel', booked_environment_path(booking), method: :delete, class: 'btn btn-sm btn-warning'
 
 .modal-footer
   = link_to 'Book', booked_environments_path(environment_id: @environment.id), method: :post, class: 'btn btn-success'
