--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -2,7 +2,8 @@
   table.table.table-striped
     thead.thead-dark
       tr
-        th.col-4 Name
+        th.col-1 #
+        th.col-3 Name
         th.col-6 Status
         th.col-2.text-center Action
 
