--- a/app/views/environments/_show.html.slim
+++ b/app/views/environments/_show.html.slim
@@ -3,22 +3,22 @@
   button.close type='button' data-dismiss='modal' aria-label='Close'
     span aria-hidden='true' &times;
 
-.modal-body
-  - if @environment.booked_environments.present?
-    table.table.table-striped
-      thead
-        tr
-          th.col-10 #
-          th.col-2.text-center Action
+.modal-body#modal-body
+  table.table.table-striped class=('d-none' unless @environment.booked_environments.present?)
+    thead.thead-dark
+      tr
+        th.col-10 Booker
+        th.col-2.text-center Action
 
-      tbody
-        - @environment.booked_environments.each_with_index do |booking, index|
-          tr
-            td = index + 1
-            td
-              - if current_user.booked_environments.include?(booking)
-                = link_to 'Cancel', booked_environment_path(booking), method: :delete, class: 'btn btn-sm btn-warning'
+    tbody#booking-management-tbody
+      = render @environment.booked_environments
+
+  .be-the-first-msg.text-center class=('d-none' if @environment.booked_environments.present?)
+    .text-muted Be the first who book this environment!
 
 .modal-footer
-  = link_to 'Book', booked_environments_path(environment_id: @environment.id), method: :post, class: 'btn btn-success'
+  = link_to 'Book', booked_environments_path(environment_id: @environment.id),
+                    method: :post,
+                    remote: true,
+                    class: 'btn btn-success'
   button.btn.btn-secondary type='button' data-dismiss='modal' Close
