--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require timepicker
  *= require_tree .
  *= require_self
  */
@@ -18,4 +19,12 @@
 
 .additional-container-pad {
   padding: 15px;
+}
+
+.additional-top-mar {
+  margin-top: 10px;
+}
+
+.without-mar {
+  margin: 0px;
 }
