--- a/app/views/environments/_show.html.slim
+++ b/app/views/environments/_show.html.slim
@@ -7,7 +7,8 @@
   table.table.table-striped class=('d-none' unless @environment.booked_environments.present?)
     thead.thead-dark
       tr
-        th.col-10 Booker
+        th.col-6 Booker
+        th.col-4 Period
         th.col-2.text-center Action
 
     tbody#booking-management-tbody
