--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -11,5 +11,5 @@
       = render @environments
 
 #modal-window.modal.fade tabindex='-1' role='dialog' aria-labelledby='myModalLabel' aria-hidden='true'
-  .modal-dialog role='document'
+  .modal-dialog.modal-lg role='document'
     .modal-content
