--- a/app/views/environments/_show.html.slim
+++ b/app/views/environments/_show.html.slim
@@ -21,7 +21,11 @@
     .text-center
       = form_tag(booked_environments_path, method: :post, remote: true) do
         = hidden_field_tag(:environment_id, @environment.id)
+        | Today from:
+        '
         = text_field_tag(:from, '', id: 'timepicker-start')
+        '
+        | to:
         '
         = text_field_tag(:to, '', id: 'timepicker-end')
         '
