--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -5,7 +5,9 @@
         th.col-1 #
         th.col-3 Name
         th.col-6 Status
-        th.col-2.text-center Action
+
+        - if user_signed_in?
+          th.col-2.text-center Action
 
     tbody
       = render @environments
