--- a/app/views/bookings/destroy.js.erb
+++ b/app/views/bookings/destroy.js.erb
@@ -1,9 +1,9 @@
-$('#booking-management-tbody').find('#booked_environment_<%= @booking.id %>').remove();
+$('#booking-management-tbody').find('#booking_<%= @booking.id %>').remove();
 $('#errors').addClass('d-none');
 
 $('#environment_<%= @environment.id %>').html('<%= @environment.status_message %>');
 
-<% unless @environment.booked_environments.present? %>
+<% unless @environment.bookings.present? %>
   $('#modal-body').find('table').addClass('d-none');
   $('#modal-body').find('.be-the-first-msg').removeClass('d-none');
 <% end %>
