--- a/app/views/environments/_show.html.slim
+++ b/app/views/environments/_show.html.slim
@@ -4,7 +4,7 @@
     span aria-hidden='true' &times;
 
 .modal-body#modal-body
-  table.table.table-striped class=('d-none' unless @booked_environments.present?)
+  table.table.table-striped class=('d-none' unless @bookings.present?)
     thead.thead-dark
       tr
         th.col-6 Booker
@@ -12,14 +12,14 @@
         th.col-2.text-center Action
 
     tbody#booking-management-tbody
-      = render @booked_environments
+      = render @bookings
 
-  .be-the-first-msg.text-center class=('d-none' if @booked_environments.present?)
+  .be-the-first-msg.text-center class=('d-none' if @bookings.present?)
     .text-muted Be the first who book this environment!
 
   .additional-top-mar
     .text-center
-      = form_tag(booked_environments_path, method: :post, remote: true) do
+      = form_tag(bookings_path, method: :post, remote: true) do
         = hidden_field_tag(:environment_id, @environment.id)
         | Today from:
         '
