replace time ranges with minutes

--- a/app/views/bookings/_booking.html.slim
+++ b/app/views/bookings/_booking.html.slim
@@ -1,6 +1,6 @@
 tr id=("booking_#{booking.id}")
   td = booking.user.email
-  td = "From #{booking.from.strftime("%I:%M%P")} to #{booking.to.strftime("%I:%M%P")}"
+  td = pluralize(booking.duration, 'minute')
   td.text-center
     - if current_user.bookings.include?(booking)
       = link_to 'Cancel', booking_path(booking),
