--- a/app/views/environments/_show.html.slim
+++ b/app/views/environments/_show.html.slim
@@ -1,5 +1,5 @@
 .modal-header
-  h5#exampleModalLabel.modal-title = @environment.name
+  h5#exampleModalLabel.modal-title = environment_title(@environment)
   button.close type='button' data-dismiss='modal' aria-label='Close'
     span aria-hidden='true' &times;
 
@@ -7,29 +7,25 @@
   table.table.table-striped class=('d-none' unless @bookings.present?)
     thead.thead-dark
       tr
-        th.col-6 Booker
-        th.col-4 Period
+        th.col-8 Booker
+        th.col-2 Duration
         th.col-2.text-center Action
 
     tbody#booking-management-tbody
-      = render @bookings
+      = render @bookings.finished
+      = render @bookings.current || []
+      = render @bookings.future
 
   .be-the-first-msg.text-center class=('d-none' if @bookings.present?)
     .text-muted Be the first who book this environment!
 
   .additional-top-mar
-    .text-center
-      = form_tag(bookings_path, method: :post, remote: true) do
-        = hidden_field_tag(:environment_id, @environment.id)
-        | Today from:
-        '
-        = text_field_tag(:from, '', id: 'timepicker-start')
-        '
-        | to:
-        '
-        = text_field_tag(:to, '', id: 'timepicker-end')
-        '
-        = submit_tag('Book', class: 'btn btn-success')
+    = form_tag(bookings_path, method: :post, remote: true, class: 'form-inline justify-content-center') do
+      = hidden_field_tag(:environment_id, @environment.id)
+      .input-group
+        = number_field_tag(:duration, nil, min: 1, class: 'form-control', placeholder: 'Time duration in minutes')
+        .input-group-append
+          = submit_tag('Book', class: 'btn btn-success')
 
     #errors.alert.alert-danger.additional-top-mar.d-none
 
