--- a/app/views/bookings/_booking.html.slim
+++ b/app/views/bookings/_booking.html.slim
@@ -1,6 +1,7 @@
-tr id=("booking_#{booking.id}")
+tr id=("booking_#{booking.id}") class=(row_style(booking))
   td = booking.user.email
   td = pluralize(booking.duration, 'minute')
+  td = booking.until.strftime('%F %T')
   td.text-center
     - if current_user.bookings.include?(booking)
       = link_to 'Cancel', booking_path(booking),
